--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   dio: ^5.0.0
   firebase_remote_config: ^3.0.12
   flutter_secure_storage: ^8.0.0
+  firebase_core: ^2.6.1
 
 dev_dependencies:
   flutter_test:
