--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   stacked: ^3.1.0+3
   webview_flutter: ^4.0.2
+  url_launcher: ^6.1.9
   http: ^0.13.5
   dio: ^5.0.0
   firebase_remote_config: ^3.0.12
   flutter_secure_storage: ^8.0.0
   firebase_core: ^2.6.1
+  firebase_analytics: ^10.1.3
+  device_info_plus: ^8.1.0
+  webview_flutter_platform_interface: ^2.0.1
 
 dev_dependencies:
   flutter_test:
