--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.test.app.test_app">
+    package="sestol.gathe">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CAMERA" />
    <application
-        android:label="test_app"
+        android:label="Спорт"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
